<resources>
    <!--主页菜单-->
    <string name="menu_index">主页</string>
    <string name="menu_order">订单</string>
    <string name="menu_myself">我的</string>

    <string name="menu_fabu">发布</string>

    <string name="app_name">design</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="change_the_password">修改密码</string>
    <string name="check_update">检查更新</string>
    <string name="log_out">注销登录</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--全局 all_<DESCRIPTION>-->
    <string name="all_dialog">系统提示</string>
    <string name="all_cancel">取消</string>
    <string name="all_confirm">确认</string>
    <string name="all_close">关闭</string>
    <string name="all_add">添加</string>
    <string name="all_no">否</string>
    <string name="all_yes">是</string>
    <string name="all_update">编辑</string>
    <string name="all_delete">删除</string>
    <string name="visible">visible</string>
    <string name="gone">gone</string>
    <string name="password">＊</string>
    <string name="rate">%</string>


    <!--返回-->
    <string name="all_go_back">返回</string>
    <string name="login_et_password_hint">请输入密码</string>
    <string name="login_et_password_two_hint">请再次输入密码</string>
    <string name="login_et_username_hint">请输入用户名</string>
    <string name="login_signinfragmentfragment_btn_login">登录</string>
    <string name="login_registerfragmentfragment_btn_register">注册</string>
    <!--输入密码界面-->
    <string name="login_smscodefragment_et_one_input_password_hint">请输入老密码</string>
    <string name="login_smscodefragment_et_two_input_password_hint">请输入新密码</string>
    <string name="login_smscodefragment_btn_next">下一步</string>

    <string-array name="permissions">
        <item>@string/permission_recode_audio_hint</item>
        <item>@string/permission_get_accounts_hint</item>
        <item>@string/permission_read_phone_hint</item>
        <item>@string/permission_call_phone_hint</item>
        <item>@string/permission_camera_hint</item>
        <item>@string/permission_access_fine_location_hint</item>
        <item>@string/permission_access_coarse_location_hint</item>
        <item>@string/permission_read_external_hint</item>
        <item>@string/permission_white_external_hint</item>
    </string-array>
    <string name="permission_get_accounts_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_GET_ACCOUNTS</string>
    <string name="permission_read_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_PHONE_STATE</string>
    <string name="permission_call_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CALL_PHONE</string>
    <string name="permission_camera_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CAMERA</string>
    <string name="permission_access_fine_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_FINE_LOCATION</string>
    <string name="permission_access_coarse_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_COARSE_LOCATION</string>
    <string name="permission_read_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_EXTERNAL_STORAGE</string>
    <string name="permission_white_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_WRITE_EXTERNAL_STORAGE</string>
    <string name="permission_recode_audio_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_RECORD_AUDIO</string>

</resources>
