<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="onClickListener"
            type="android.view.View.OnClickListener"/>

    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:background="@color/white_caocao"
                  android:gravity="center"
                  android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:src="@mipmap/logo"/>

            <EditText
                android:id="@+id/et_phone"
                style="@style/editText"
                android:digits="1234567890"
                android:drawableLeft="@mipmap/login_username1"
                android:drawablePadding="@dimen/all_padding"
                android:ems="10"
                android:hint="@string/login_et_username_hint"
                android:inputType="phone"
                android:maxLength="11"/>

            <EditText
                android:id="@+id/et_one_password"
                style="@style/editText_new"
                android:layout_marginTop="@dimen/et_margin_edittext"
                android:digits="1234567890"
                android:drawableLeft="@mipmap/login_pwd01"
                android:drawablePadding="@dimen/all_padding"
                android:ems="10"
                android:hint="@string/login_smscodefragment_et_one_input_password_hint"
                android:inputType="textPassword"
                android:maxLength="8"/>

            <EditText
                android:id="@+id/et_two_password"
                style="@style/editText_new"
                android:layout_marginTop="@dimen/et_margin_edittext"
                android:digits="1234567890"
                android:drawableLeft="@mipmap/pwd_two01"
                android:drawablePadding="@dimen/all_padding"
                android:ems="10"
                android:hint="@string/login_smscodefragment_et_two_input_password_hint"
                android:inputType="textPassword"
                android:maxLength="8"/>


            <Button
                android:id="@+id/btn_next"
                style="@style/button"
                android:layout_marginTop="@dimen/et_margin_logo"
                android:onClick="@{onClickListener}"
                android:text="@string/login_smscodefragment_btn_next"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/et_margin_logo">

                <TextView
                    android:id="@+id/tv_existing_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/all_margin_left"
                    android:onClick="@{onClickListener}"
                    android:text="已有账号 >"
                    android:textColor="@color/black_baozheng"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</layout>