<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="onClickListener"
            type="android.view.View.OnClickListener"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_caocao"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/all_bounced_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center|bottom">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/logo"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="vertical">


            <RelativeLayout
                android:id="@+id/rl_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/et_margin_logo"
                android:layout_marginLeft="@dimen/all_margin_left"
                android:layout_marginRight="@dimen/all_margin_left"
                android:layout_marginTop="@dimen/et_margin_logo">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_baozheng"/>

                <TextView
                    android:id="@+id/tv_have_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:onClick="@{onClickListener}"
                    android:text="已有账户"
                    android:textColor="@color/black_baozheng"/>
            </RelativeLayout>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/rl_bottom"
                android:layout_marginLeft="@dimen/all_margin_left"
                android:layout_marginRight="@dimen/all_margin_left"
                android:layout_marginTop="@dimen/et_margin_logo"
                android:background="@drawable/red_border"
                android:imeOptions="actionDone"
                android:onClick="@{onClickListener}"
                android:text="@string/login_registerfragmentfragment_btn_register"
                android:textColor="@color/white_caocao"
                android:textSize="@dimen/et_textsize"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/btn_register"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_phone"
                    style="@style/editText"
                    android:digits="1234567890"
                    android:drawableLeft="@mipmap/login_username1"
                    android:drawablePadding="@dimen/all_padding"
                    android:ems="10"
                    android:hint="@string/login_et_username_hint"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:saveEnabled="true"/>


                <EditText
                    android:id="@+id/et_pwd_one"
                    style="@style/editText"
                    android:layout_marginTop="@dimen/et_margin_edittext"
                    android:digits="1234567890"
                    android:drawableLeft="@mipmap/login_pwd01"
                    android:drawablePadding="@dimen/all_padding"
                    android:ems="10"
                    android:hint="@string/login_et_password_hint"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:saveEnabled="true"/>

                <EditText
                    android:id="@+id/et_pwd_two"
                    style="@style/editText"
                    android:layout_marginTop="@dimen/et_margin_edittext"
                    android:digits="1234567890"
                    android:drawableLeft="@mipmap/login_cipher_03"
                    android:drawablePadding="@dimen/all_padding"
                    android:ems="10"
                    android:hint="@string/login_et_password_two_hint"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:saveEnabled="true"/>
            </LinearLayout>
        </RelativeLayout>


    </LinearLayout>


</layout>